<resources>
    <string name="app_name">Reddcoin</string>
    <string name="app_package">com.reddcoin.wallet.dev</string>
    <string name="action_scan_qr_code">Scan</string>
    <string name="action_share">Share</string>
    <string name="action_copy">Copy</string>
    <string name="action_edit_label">Edit label</string>
    <string name="action_empty_wallet">Empty wallet</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new_address">New address</string>
    <string name="action_swap_coins">Swap coins</string>
    <string name="action_friends">Address Book</string>
    <string name="error_generic">Error occurred while performing action</string>
    <string name="error_could_not_read_wallet">Could not read wallet</string>
    <string name="button_ok">OK</string>
    <string name="button_next">NEXT</string>
    <string name="button_finish">FINISH</string>
    <string name="button_confirm">CONFIRM</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_dismiss">DISMISS</string>
    <string name="button_delete">DELETE</string>
    <string name="button_add">ADD</string>
    <string name="button_save">SAVE</string>
    <string name="button_set">SET</string>
    <string name="button_remove">REMOVE</string>
    <string name="button_edit">EDIT</string>
    <string name="button_send">SEND</string>
    <string name="button_skip">SKIP</string>
    <string name="button_retry">RETRY</string>
    <string name="button_download">DOWNLOAD</string>
    <string name="button_agree">AGREE</string>
    <string name="button_disagree">DISAGREE</string>
    <string name="button_add_coins">+ COINS</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="wallet_title_request">receive</string>
    <string name="wallet_title_balance">balance</string>
    <string name="wallet_title_send">send</string>
    <string name="almost_equal_to">≈</string>
    <string name="wallet_locked_message">Your wallet is locked</string>
    <string name="unlock_wallet_title">Unlock your wallet</string>
    <string name="unlocking_wallet_working">Unlocking your wallet&#8230;</string>
    <string name="unlocking_wallet_error_title">Unlocking error</string>
    <string name="unlocking_wallet_error_detail">Please check that your password is correct.\nIf this error persists try to restore your wallet.</string>
    <string name="powered_by">Powered by</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_services">Services</string>
    <string name="navigation_drawer_wallet">Wallet</string>
    <string name="fee">Transaction fee</string>
    <string name="send">Send</string>
    <string name="trade">Exchange</string>
    <string name="receive">Receive</string>
    <string name="welcome_text">Welcome to the Reddcoin Android wallet</string>
    <string name="create_wallet">Create a new wallet</string>
    <string name="restore_wallet">Restore a wallet</string>
    <string name="test_wallet">Test wallet</string>
    <string name="test_wallet_warning_title">Create a test wallet?</string>
    <string name="test_wallet_warning_message">If you create a new test wallet, your existing wallet will be lost unless you backed up you <i>recovery phrase</i>.</string>
    <string name="incompatible_device_warning_title">Incompatible device</string>
    <string name="incompatible_device_warning_message">This device cannot perform certain cryptographic functions due to software or hardware bugs.\nThis could be solved with an update from the manufacturer.\n\nContact us if you have any questions: playstore@coinomi.com</string>
    <string name="seed_info">This is your <i>recovery phrase</i>, which is used to generate the keys for your wallet. Please write it down on a paper and keep it in a secure place, as you would with paper money. Anyone with access to it has access to the wallet\'s funds.\nIf you lose your recovery phrase, your wallet cannot be recovered.</string>
    <string name="seed_title">your recovery phrase</string>
    <string name="sample_seed">deliver broken make enrich core vendor ski help sock spy purse roast token jewel female</string>
    <string name="seed_regenerate_title">touch to generate a new recovery phrase</string>
    <string name="backed_up_seed">I have copied and stored my recovery phrase in a secure place.</string>
    <string name="restore_info">Please enter your recovery phrase:</string>
    <string name="restore_seed_protected">My recovery phrase is password protected</string>
    <string name="restore_skip_title">Skipping verification</string>
    <string name="restore_skip_info1">Please make sure that your recovery phrase matches the following:</string>
    <string name="restore_skip_info2">It is recommended not to skip verification, so that any misspellings could be detected.</string>
    <string name="restore_error_checksum">Recovery phrase is not valid. Check if some words are misspelled.</string>
    <string name="restore_error_words">Recovery phrase contains unrecognized words.</string>
    <string name="restore_error_mismatch">Recovery phrase entered does not match your recovery phrase.</string>
    <string name="restore_error">Could not verify your recovery phrase. %1$s</string>
    <string name="extra_entropy">Extra entropy</string>
    <string name="test_wallet_message">This is a test wallet, where you can send and receive testnet Bitcoins, Litecoin and Dogecoins.\n\nIf you want to use the wallet with real money please go to: <b>Settings > Restore wallet > Create a new wallet</b>.</string>
    <string name="wallet_update_title">New version available</string>
    <string name="wallet_update_message">A new version of the Reddcoin Android wallet is available, it contains new features and fixes.</string>
    <string name="wallet_transactions_coinbase">mined</string>
    <string name="history_empty">No coins received so far!\n\nYou can get some through an exchange, trading and selling goods or services.</string>
    <string name="sent_to">sent to</string>
    <string name="received_with">received with</string>
    <string name="get_tx_info_error">Could not get transaction information</string>
    <string name="disconnected_label">No connection</string>
    <string name="no_wallet_pocket_selected">No wallet pocket selected</string>
    <string name="get_tx_broadcast_error">Error broadcasting transaction</string>
    <string name="receive_address_label">my address</string>
    <string name="create_new_address">Create a new address?</string>
    <string name="create_new_address_name">Name (optional)</string>
    <string name="view_previous_addresses">Previous addresses</string>
    <string name="too_many_unused_addresses">Too many unused addresses, try to use one of the previous addresses before creating a new one.</string>
    <string name="send_coins_fragment_receiving_address_label">Pay to</string>
    <string name="send_coins_fragment_receiving_address_tip">type address</string>
    <string name="send_coins_fragment_receiving_address_error">Invalid Bitcoin Address!</string>
    <string name="send_coins_fragment_amount_label">Amount to pay</string>
    <string name="send_coins_fragment_button_send">Send</string>
    <string name="send_coins_fragment_button_back">Back</string>
    <string name="send_coins_failed_msg">Failed!</string>
    <string name="send_coins_error_network">Could not connect to the coin network</string>
    <string name="send_coins_error_dust">The sending amount is too small and will be rejected by the network</string>
    <string name="send_coins_error">Could not send coins: %1$s</string>
    <string name="pay_to_label">pay to</string>
    <string name="amount_to_send_label">amount</string>
    <string name="uri_error">There was a problem decoding URI: %1$s</string>
    <string name="unsupported_coin">coin is not supported: %1$s</string>
    <string name="coin_not_added">coin is supported but is not added: %1$s</string>
    <string name="address_error">The provided address is not valid.</string>
    <string name="amount_error">The provided amount is not valid</string>
    <string name="amount_error_empty">Please enter an amount</string>
    <string name="amount_error_negative">Cannot send a negative amount</string>
    <string name="amount_error_decimal_places">Too many decimal places, try less than %1$d</string>
    <string name="amount_error_too_small">The minimum amount is at least %1$s %2$s</string>
    <string name="amount_error_not_enough_money_plain">Not enough money</string>
    <string name="amount_error_not_enough_money">Not enough money, current balance is %1$s %2$s</string>
    <string name="amount_warn_fees_apply">Slightly less will be sent because of fees</string>
    <string name="set_password_info">Set a password to protect your wallet in everyday use.</string>
    <string name="set_password_seed_protect">Also protect my recovery phrase</string>
    <string name="set_password_seed_protect_info">The password becomes permanent and it is needed when restoring your wallet with the recovery phrase.\nWARNING: If you forget your password it will be impossible to restore your wallet!</string>
    <string name="set_password1">Type your password</string>
    <string name="set_password2">Re-type your password</string>
    <string name="password_too_common_error">Password \"%1$s\" is too common to be safely used.</string>
    <string name="password_too_short_error">Password is too short, minimum %1$d characters.</string>
    <string name="passwords_mismatch">Passwords don\'t match</string>
    <string name="password_error">Could not proceed, password errors detected.</string>
    <string name="password_skip_warn">By not setting a password, your wallet can be accessed without authorization.</string>
    <string name="password_wallet_recovery">To restore your wallet, please provide the same password you used when created the protected recovery phrase.\nIf you enter a different password a new empty wallet will be created.</string>
    <string name="wallet_restoration">Please wait while your wallet is being restored</string>
    <string name="wallet_restoration_error">Could not restore your wallet.\n\n%1$s</string>
    <string name="enter_password">Enter your password</string>
    <string name="contacting_exchange">Contacting exchange&#8230;</string>
    <string name="preparing_transaction">Please wait while your transaction is being prepared and sent.</string>
    <string name="no_such_pocket_error">An error occurred while accessing this wallet pocket. If the problem persists try to restore the wallet from the recovery phrase.</string>
    <string name="pref_title_restore_wallet">Restore wallet</string>
    <string name="pref_title_exchange_rates">Exchange rates</string>
    <string name="pref_title_manual_receiving_addresses">Manual receiving addresses</string>
    <string name="pref_summary_manual_receiving_addresses">Do not automatically create a new address for every transaction</string>
    <string name="title_activity_show_seed">Show back-up phrase</string>
    <string name="add_friend">Add</string>
    <string name="friend_name_input">type name</string>
    <string name="friend_address_input">type address</string>
    <string name="friend_action_save">Save</string>
    <string name="friend_action_remove">Remove</string>
    <string name="send_frag_action_address">Select</string>
    <string name="send_frag_action_save">Save</string>
    <string name="movies_categories_key">categoriesKey</string>
    <string name="server_url_key">urlKey</string>
    <string name="server_url_default">http://localhost:8080</string>
</resources>