<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.reddcoin.wallet.ui.FriendsActivity">

    <LinearLayout
        android:layout_width="299dp"
        android:layout_height="342dp"
        android:layout_marginTop="252dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="147dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="Mike"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Remove"
                android:textAlignment="viewStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="103dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="Kelly"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Remove"
                android:textAlignment="viewStart" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:onClick="addFriend"
        android:text="@string/add_friend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/friend_name_input"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/friend_address_input"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/scan_qr_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <ImageButton
        android:id="@+id/scan_qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/send_to_address"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/scan_qr_code"
        android:src="@drawable/qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addButton" />

</android.support.constraint.ConstraintLayout>
